More unification of mdn/caniuse annotation panels, plus make them avoid overlapping each other.

--- a/bikeshed/caniuse/caniuse.css
+++ b/bikeshed/caniuse/caniuse.css
@@ -1,3 +1,9 @@
+@media (max-width: 767px) {
+	.caniuse-status {
+		opacity: .1;
+		transition: opacity .1s;
+	}
+}
 :root {
 	--caniuse-bg: #EEE;
 	--caniuse-shadow: #999;
@@ -5,40 +11,44 @@
 	--caniuse-partialsupport-text: #666;
 }
 .caniuse-status {
-	font: 1em sans-serif;
-	width: 9em;
-	padding: 0.3em;
-	position: absolute;
-	z-index: 8;
-	top: auto;
-	right: 0.3em;
 	background: var(--caniuse-bg, #EEE);
-	color: var(--text, black);
-	box-shadow: 0 0 3px var(--caniuse-shadow, #999);
-	overflow: hidden;
 	border-radius: .25em;
+	box-shadow: 0 0 3px var(--caniuse-shadow, #999);
+	color: var(--text, black);
+	font: 1em sans-serif;
+	hyphens: none;
+	max-width: min-content;
+	overflow: hidden;
+	padding: .2em;
+	position: absolute;
+	right: 0.3em;
+	top: auto;
+	width: fit-content;
+	word-wrap: normal;
+	z-index: 8;
 }
-.caniuse-status.wrapped {
-	width: auto;
-	height: 1em;
-}
-.caniuse-status.wrapped > :not(input) {
+.caniuse-status.unpositioned {
 	display: none;
 }
-.caniuse-status:not(.wrapped) {
+.caniuse-status.overlapping-main {
+	opacity: .2;
+	transition: opacity .1s;
+}
+.caniuse-status[open] {
 	opacity: 1;
 	z-index: 9;
+	min-width: 9em;
+	width: fit-content;
 }
 .caniuse-status:hover {
 	outline: var(--text, black) 1px solid;
+	opacity: 1;
 }
-.caniuse-status > input {
+.caniuse-status > summary {
+	font-weight: normal;
+	text-align: right;
 	cursor: pointer;
-	float: right;
-	border: none;
-	background: transparent;
-	padding: 0;
-	margin: 0;
+	display: block;
 }
 .caniuse-status > p {
 	font-size: 0.6em;
