--- a/bikeshed/mdn/mdn.css
+++ b/bikeshed/mdn/mdn.css
@@ -1,64 +1,56 @@
-@media (max-width: 767px) {
-	.mdn-anno {
-		opacity: .1;
-	}
-}
 :root {
 	--mdn-bg: #EEE;
 	--mdn-shadow: #999;
 	--mdn-nosupport-text: #ccc;
 }
 .mdn-anno {
-	font: 1em sans-serif;
-	padding: 0.3em;
-	position: absolute;
-	z-index: 8;
-	right: 0.3em;
 	background: var(--mdn-bg, #EEE);
-	color: var(--text, black);
+	border-radius: .25em;
 	box-shadow: 0 0 3px var(--mdn-shadow, #999);
-	overflow: hidden;
-	border-collapse: initial;
-	border-spacing: initial;
-	min-width: 9em;
+	color: var(--text, black);
+	font: 1em sans-serif;
+	hyphens: none;
 	max-width: min-content;
+	overflow: hidden;
+	padding: 0.2em;
+	position: absolute;
+	right: 0.3em;
+	top: auto;
 	white-space: nowrap;
 	word-wrap: normal;
-	hyphens: none;
-	border-radius: .25em;
+	z-index: 8;
 }
-.mdn-anno:not(.wrapped) {
-	opacity: 1;
-	z-index: 9;
-}
-.mdn-anno.wrapped {
-	min-width: 0;
-}
-.mdn-anno.wrapped > :not(button) {
+.mdn-anno.unpositioned {
 	display: none;
 }
+.mdn-anno.overlapping-main {
+	opacity: .1;
+	transition: opacity .1s;
+}
+.mdn-anno[open] {
+	opacity: 1;
+	z-index: 9;
+	min-width: 9em;
+}
 .mdn-anno:hover {
+	opacity: 1;
 	outline: var(--text, black) 1px solid;
 }
-.mdn-anno > .mdn-anno-btn {
+.mdn-anno > summary {
+	font-weight: normal;
+	text-align: right;
 	cursor: pointer;
-	border: none;
-	color: #000;
-	background: transparent;
-	margin: -8px;
-	float: right;
-	padding: 10px 8px 8px 8px;
-	outline: none;
+	display: block;
 }
-.mdn-anno > .mdn-anno-btn > .less-than-two-engines-flag {
+.mdn-anno > summary > .less-than-two-engines-flag {
 	color: red;
 	padding-right: 2px;
 }
-.mdn-anno > .mdn-anno-btn > .all-engines-flag {
+.mdn-anno > summary > .all-engines-flag {
 	color: green;
 	padding-right: 2px;
 }
-.mdn-anno > .mdn-anno-btn > span {
+.mdn-anno > summary > span {
 	color: #fff;
 	background-color: #000;
 	font-weight: normal;
